page routing changed

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Ubuntu:wght@300;400;500;700&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="../dist/output.css">
+    <link rel="stylesheet" href="./dist/output.css">
 </head>
 
 <body>
@@ -55,13 +55,13 @@
                 <div class="flex justify-between items-center flex-wrap lg:flex-nowrap">
 
                     <div>
-                        <a href="./index.html">
-                            <img class="w-28" src="./media/big-logo.png" alt="">
+                        <a href="/">
+                            <img class="w-28" src="./src/media/big-logo.png" alt="">
                         </a>
                     </div>
 
                     <nav class="hidden lg:flex items-center gap-x-8 text-sm">
-                        <li class="list-none"> <a href="./index.html"
+                        <li class="list-none"> <a href="/"
                                 class="text-white hover:text-red-600 uppercase">Home</a> </li>
                         <li class="list-none"> <a href="./car-listing.html"
                                 class="text-white hover:text-red-600 uppercase">Our Cars</a>
@@ -81,7 +81,7 @@
                         <a class="toggle absolute right-5 top-14" href=""><i class="fa fa-bars text-2xl text-white" aria-hidden="true"></i></a>
 
                         <nav class="text-sm bg-red-600 p-8">
-                            <li class="list-none mb-3"> <a href="./index.html"
+                            <li class="list-none mb-3"> <a href="/"
                                     class="text-white uppercase">Home</a> </li>
                             <li class="list-none mb-3"> <a href="./car-listing.html"
                                     class="text-white uppercase">Our Cars</a>
@@ -108,7 +108,7 @@
     <main>
 
         <!-- BANNER -->
-        <section style="background-image: url(./media/banner.jpeg)"
+        <section style="background-image: url(./src/media/banner.jpeg)"
             class="banner-shape grid place-content-center bg-no-repeat bg-cover bg-top h-screen">
 
             <div class="container">
@@ -150,7 +150,7 @@
         <section class="container mx-auto py-20 columns-1 lg:columns-3 gap-7">
             <div
                 class="text-center shadow-lg border-b-2 border-black/80 hover:border-red-600 px-10 lg:px-12 py-10 lg:py-16">
-                <img class="w-20 mx-auto" src="./media/time.png" alt="">
+                <img class="w-20 mx-auto" src="./src/media/time.png" alt="">
                 <h3 class="text-xl text-black/80 font-medium py-7">Fast & Easy Booking</h3>
                 <hr class="w-8 h-1 mx-auto mb-7 bg-black/20">
                 <p class="text-black/70">Semper aibers vestibulum fringil voluptate
@@ -160,7 +160,7 @@
 
             <div
                 class="text-center shadow-lg border-b-2 border-black/80 hover:border-red-600 px-10 lg:px-12 py-10 lg:py-16">
-                <img class="w-20 mx-auto" src="./media/time.png" alt="">
+                <img class="w-20 mx-auto" src="./src/media/time.png" alt="">
                 <h3 class="text-xl text-black/80 font-medium py-7">Fast & Easy Booking</h3>
                 <hr class="w-8 h-1 mx-auto mb-7 bg-black/20">
                 <p class="text-black/70">Semper aibers vestibulum fringil voluptate
@@ -170,7 +170,7 @@
 
             <div
                 class="text-center shadow-lg border-b-2 border-black/80 hover:border-red-600 px-10 lg:px-12 py-10 lg:py-16">
-                <img class="w-20 mx-auto" src="./media/time.png" alt="">
+                <img class="w-20 mx-auto" src="./src/media/time.png" alt="">
                 <h3 class="text-xl text-black/80 font-medium py-7">Fast & Easy Booking</h3>
                 <hr class="w-8 h-1 mx-auto mb-7 bg-black/20">
                 <p class="text-black/70">Semper aibers vestibulum fringil voluptate
@@ -195,11 +195,11 @@
                         Click
                         below link now to see how our theme works:
                     </p>
-                    <img src="./media/sgn.png" alt="">
+                    <img src="./src/media/sgn.png" alt="">
                 </div>
 
                 <div class="w-3/5 hidden lg:block">
-                    <img src="./media/tw2.jpg" alt="">
+                    <img src="./src/media/tw2.jpg" alt="">
                 </div>
             </div>
         </section>
@@ -222,7 +222,7 @@
                 <div class="mt-16 flex flex-wrap lg:flex-nowrap gap-7">
                     <div class="bg-white overflow-hidden">
                         <a href="./single-product.html">
-                            <img class="scale-100 hover:scale-110 duration-1000" src="./media/ag_mc_ford.jpeg"
+                            <img class="scale-100 hover:scale-110 duration-1000" src="./src/media/ag_mc_ford.jpeg"
                                 alt="Car Img">
                             <div class="py-10 text-center">
                                 <h4 class="font-bold text-black/80 text-xl mb-5">AG MC Ford Raptor</h4>
@@ -246,7 +246,7 @@
 
                     <div class="bg-white overflow-hidden">
                         <a href="./single-product.html">
-                            <img class="scale-100 hover:scale-110 duration-1000" src="./media/ag_mc_ford.jpeg"
+                            <img class="scale-100 hover:scale-110 duration-1000" src="./src/media/ag_mc_ford.jpeg"
                                 alt="Car Img">
                             <div class="py-10 text-center">
                                 <h4 class="font-bold text-black/80 text-xl mb-5">AG MC Ford Raptor</h4>
@@ -270,7 +270,7 @@
 
                     <div class="bg-white overflow-hidden">
                         <a href="./single-product.html">
-                            <img class="scale-100 hover:scale-110 duration-1000" src="./media/ag_mc_ford.jpeg"
+                            <img class="scale-100 hover:scale-110 duration-1000" src="./src/media/ag_mc_ford.jpeg"
                                 alt="Car Img">
                             <div class="py-10 text-center">
                                 <h4 class="font-bold text-black/80 text-xl mb-5">AG MC Ford Raptor</h4>
@@ -296,7 +296,7 @@
                 <div class="mt-8 flex flex-wrap lg:flex-nowrap gap-7">
                     <div class="bg-white overflow-hidden">
                         <a href="./single-product.html">
-                            <img class="scale-100 hover:scale-110 duration-1000" src="./media/ag_mc_ford.jpeg"
+                            <img class="scale-100 hover:scale-110 duration-1000" src="./src/media/ag_mc_ford.jpeg"
                                 alt="Car Img">
                             <div class="py-10 text-center">
                                 <h4 class="font-bold text-black/80 text-xl mb-5">AG MC Ford Raptor</h4>
@@ -320,7 +320,7 @@
 
                     <div class="bg-white overflow-hidden">
                         <a href="./single-product.html">
-                            <img class="scale-100 hover:scale-110 duration-1000" src="./media/ag_mc_ford.jpeg"
+                            <img class="scale-100 hover:scale-110 duration-1000" src="./src/media/ag_mc_ford.jpeg"
                                 alt="Car Img">
                             <div class="py-10 text-center">
                                 <h4 class="font-bold text-black/80 text-xl mb-5">AG MC Ford Raptor</h4>
@@ -344,7 +344,7 @@
 
                     <div class="bg-white overflow-hidden">
                         <a href="./single-product.html">
-                            <img class="scale-100 hover:scale-110 duration-1000" src="./media/ag_mc_ford.jpeg"
+                            <img class="scale-100 hover:scale-110 duration-1000" src="./src/media/ag_mc_ford.jpeg"
                                 alt="Car Img">
                             <div class="py-10 text-center">
                                 <h4 class="font-bold text-black/80 text-xl mb-5">AG MC Ford Raptor</h4>
@@ -373,7 +373,7 @@
 
 
         <!-- CALL SECTION --->
-        <section style="background-image: url(./media/bt45.jpg)"
+        <section style="background-image: url(./src/media/bt45.jpg)"
             class="bg-no-repeat bg-cover bg-center bg-fixed pt-14 lg:pt-20 pb-10 lg:pb-0 bg-black/90 bg-blend-overlay">
             <div class="container">
                 <div class="flex justify-between items-center gap-8 flex-wrap lg:flex-nowrap">
@@ -387,7 +387,7 @@
                     </div>
 
                     <div class="hidden lg:block">
-                        <img src="./media/dealer.png" alt="Dealer Img">
+                        <img src="./src/media/dealer.png" alt="Dealer Img">
                     </div>
 
                     <div class="text-center lg:text-left">
@@ -418,7 +418,7 @@
                     custom programming job. But now there are thousands of themes out there and they all look pretty
                     much the same anyway. So how do you make an informed decision?
                 </p>
-                <img class="mx-auto" src="./media/jhon.png" alt="Client Img">
+                <img class="mx-auto" src="./src/media/jhon.png" alt="Client Img">
                 <h5 class="text-sm lg:text-lg font-medium tracking-widest uppercase text-black/70 mt-3">Jhon Stephan
                 </h5>
             </div>
@@ -432,11 +432,11 @@
     <!-- FOOTER (START) -->
     <footer>
 
-        <div style="background-image: url(./media/footer-bg.jpg)"
+        <div style="background-image: url(./src/media/footer-bg.jpg)"
             class="grid place-content-center bg-no-repeat bg-cover bg-left-top bg-fixed py-16 lg:py-32 bg-black/90 bg-blend-overlay">
             <div class="container">
-                <a href="./index.html">
-                    <img class="w-28 mx-auto" src="./media/big-logo.png" alt="">
+                <a href="/">
+                    <img class="w-28 mx-auto" src="./src/media/big-logo.png" alt="">
                 </a>
                 <h1 class="text-white/30 text-center tracking-widest mt-12 mb-2">: SHOWROOM LOCATION :</h1>
                 <p class="text-white text-center">32 Market St.128, Deeja Town, Florida, CA 12345</p>
