--- a/single-product.html
+++ b/single-product.html
@@ -10,97 +10,97 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Ubuntu:wght@300;400;500;700&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="../dist/output.css">
+    <link rel="stylesheet" href="./dist/output.css">
 </head>
 
 <body>
 
-     <!-- HEADER (START) -->
-     <header class="sticky top-0 z-10 -mb-32"
-     style="background-image: linear-gradient(180deg, #000000 20%, transparent);">
-     <!-- Topbar -->
-     <div class="bg-transparent py-2 border-y-2 border-white/40">
-         <div class="container">
-             <div class="flex justify-between items-center text-xs">
-                 <div class="flex gap-x-4">
-                     <div>
-                         <i class="fa-solid fa-phone text-white"></i>
-                         <a class="text-white hover:text-red-600 hover:underline ml-1 font-medium"
-                             href="tel:0000-1111-0000">0000-1111-0000</a>
-                     </div>
-                     <div class="hidden lg:block">
-                         <i class="fa-solid fa-envelope text-white"></i>
-                         <a class="text-white hover:text-red-600 hover:underline ml-1 uppercase font-medium"
-                             href="mailto:contact@example.com">contact@example.com</a>
-                     </div>
-                 </div>
+    <!-- HEADER (START) -->
+    <header class="sticky top-0 z-10 -mb-32"
+        style="background-image: linear-gradient(180deg, #000000 20%, transparent);">
+        <!-- Topbar -->
+        <div class="bg-transparent py-2 border-y-2 border-white/40">
+            <div class="container">
+                <div class="flex justify-between items-center text-xs">
+                    <div class="flex gap-x-4">
+                        <div>
+                            <i class="fa-solid fa-phone text-white"></i>
+                            <a class="text-white hover:text-red-600 hover:underline ml-1 font-medium"
+                                href="tel:0000-1111-0000">0000-1111-0000</a>
+                        </div>
+                        <div class="hidden lg:block">
+                            <i class="fa-solid fa-envelope text-white"></i>
+                            <a class="text-white hover:text-red-600 hover:underline ml-1 uppercase font-medium"
+                                href="mailto:contact@example.com">contact@example.com</a>
+                        </div>
+                    </div>
 
-                 <div class="flex gap-x-5">
-                     <a class="text-white/40 hover:text-red-600" href="#"><i class="fa-brands fa-facebook-f"></i></a>
-                     <a class="text-white/40 hover:text-red-600" href="#"><i
-                             class="fa-brands fa-twitter"></i></i></a>
-                     <a class="text-white/40 hover:text-red-600" href="#"><i
-                             class="fa-brands fa-instagram"></i></i></a>
-                     <a class="text-white/40 hover:text-red-600" href="#"><i
-                             class="fa-brands fa-pinterest-p"></i></a>
-                     <a class="text-white/40 hover:text-red-600" href="#"><i class="fa-brands fa-youtube"></i></a>
-                 </div>
-             </div>
-         </div>
-     </div>
+                    <div class="flex gap-x-5">
+                        <a class="text-white/40 hover:text-red-600" href="#"><i class="fa-brands fa-facebook-f"></i></a>
+                        <a class="text-white/40 hover:text-red-600" href="#"><i
+                                class="fa-brands fa-twitter"></i></i></a>
+                        <a class="text-white/40 hover:text-red-600" href="#"><i
+                                class="fa-brands fa-instagram"></i></i></a>
+                        <a class="text-white/40 hover:text-red-600" href="#"><i
+                                class="fa-brands fa-pinterest-p"></i></a>
+                        <a class="text-white/40 hover:text-red-600" href="#"><i class="fa-brands fa-youtube"></i></a>
+                    </div>
+                </div>
+            </div>
+        </div>
 
-     <!-- Main Header -->
-     <div class="py-3 bg-transparent">
-         <div class="container">
-             <div class="flex justify-between items-center flex-wrap lg:flex-nowrap">
+        <!-- Main Header -->
+        <div class="py-3 bg-transparent">
+            <div class="container">
+                <div class="flex justify-between items-center flex-wrap lg:flex-nowrap">
 
-                 <div>
-                     <a href="./index.html">
-                         <img class="w-28" src="./media/big-logo.png" alt="">
-                     </a>
-                 </div>
+                    <div>
+                        <a href="/">
+                            <img class="w-28" src="./src/media/big-logo.png" alt="">
+                        </a>
+                    </div>
 
-                 <nav class="hidden lg:flex items-center gap-x-8 text-sm">
-                     <li class="list-none"> <a href="./index.html"
-                             class="text-white hover:text-red-600 uppercase">Home</a> </li>
-                     <li class="list-none"> <a href="./car-listing.html"
-                             class="text-white hover:text-red-600 uppercase">Our Cars</a>
-                     </li>
-                     <li class="list-none"> <a href="./app.html" class="text-white hover:text-red-600 uppercase">Get
-                             App</a>
-                     </li>
-                     <li class="list-none"> <a href="./contact.html"
-                             class="text-white hover:text-red-600 uppercase">Contact</a>
-                     </li>
-                     <li class="list-none">
-                         <a class="primary-btn" href="tel:0000-1111-0000">0000-1111-0000</a>
-                     </li>
-                 </nav>
+                    <nav class="hidden lg:flex items-center gap-x-8 text-sm">
+                        <li class="list-none"> <a href="/"
+                                class="text-white hover:text-red-600 uppercase">Home</a> </li>
+                        <li class="list-none"> <a href="./car-listing.html"
+                                class="text-white hover:text-red-600 uppercase">Our Cars</a>
+                        </li>
+                        <li class="list-none"> <a href="./app.html" class="text-white hover:text-red-600 uppercase">Get
+                                App</a>
+                        </li>
+                        <li class="list-none"> <a href="./contact.html"
+                                class="text-white hover:text-red-600 uppercase">Contact</a>
+                        </li>
+                        <li class="list-none">
+                            <a class="primary-btn" href="tel:0000-1111-0000">0000-1111-0000</a>
+                        </li>
+                    </nav>
 
-                 <div class="navigation lg:hidden">
-                     <a class="toggle absolute right-5 top-14" href=""><i class="fa fa-bars text-2xl text-white" aria-hidden="true"></i></a>
+                    <div class="navigation lg:hidden">
+                        <a class="toggle absolute right-5 top-14" href=""><i class="fa fa-bars text-2xl text-white" aria-hidden="true"></i></a>
 
-                     <nav class="text-sm bg-red-600 p-8">
-                         <li class="list-none mb-3"> <a href="./index.html"
-                                 class="text-white uppercase">Home</a> </li>
-                         <li class="list-none mb-3"> <a href="./car-listing.html"
-                                 class="text-white uppercase">Our Cars</a>
-                         </li>
-                         <li class="list-none mb-3"> <a href="./app.html" class="text-white hover:text-red-600 uppercase">Get
-                                 App</a>
-                         </li>
-                         <li class="list-none mb-3"> <a href="./contact.html"
-                                 class="text-white uppercase">Contact</a>
-                         </li>
-                     </nav>
-                 </div>
+                        <nav class="text-sm bg-red-600 p-8">
+                            <li class="list-none mb-3"> <a href="/"
+                                    class="text-white uppercase">Home</a> </li>
+                            <li class="list-none mb-3"> <a href="./car-listing.html"
+                                    class="text-white uppercase">Our Cars</a>
+                            </li>
+                            <li class="list-none mb-3"> <a href="./app.html" class="text-white hover:text-red-600 uppercase">Get
+                                    App</a>
+                            </li>
+                            <li class="list-none mb-3"> <a href="./contact.html"
+                                    class="text-white uppercase">Contact</a>
+                            </li>
+                        </nav>
+                    </div>
 
-             </div>
-         </div>
-     </div>     
+                </div>
+            </div>
+        </div>     
 
- </header>
- <!-- HEADER (END) -->
+    </header>
+    <!-- HEADER (END) -->
 
 
 
@@ -108,12 +108,12 @@
     <main>
 
         <!-- BANNER -->
-        <section style="background-image: url(./media/title-bar.jpg)"
+        <section style="background-image: url(./src/media/title-bar.jpg)"
             class="banner-shape h-96 lg:h-screen grid place-content-center bg-no-repeat bg-cover bg-center bg-black/90 bg-blend-overlay">
 
             <div class="container pt-20">
                 <h1 class="text-white text-center uppercase text-3xl lg:text-4xl mb-3 font-bold">AG MC FORD RAPTOR</h1>
-                <div class="text-center text-white/40"><a class="text-red-600" href="./index.html">Home</a> / Rental /
+                <div class="text-center text-white/40"><a class="text-red-600" href="/">Home</a> / Rental /
                     AG
                     MC FORD RAPTOR
                 </div>
@@ -132,13 +132,13 @@
 
                     <!--Product Gallery-->
                     <div class="mt-6 mb-4">
-                        <img class="w-full" src="./media/ag_mc_ford.jpeg" alt="">
+                        <img class="w-full" src="./src/media/ag_mc_ford.jpeg" alt="">
                         <div class="mt-2 flex gap-2">
-                            <div><img src="./media/nissan.jpeg" alt=""></div>
-                            <div><img src="./media/ag_mc_ford.jpeg" alt=""></div>
-                            <div><img src="./media/nissan.jpeg" alt=""></div>
-                            <div><img src="./media/ag_mc_ford.jpeg" alt=""></div>
-                            <div><img src="./media/nissan.jpeg" alt=""></div>
+                            <div><img src="./src/media/nissan.jpeg" alt=""></div>
+                            <div><img src="./src/media/ag_mc_ford.jpeg" alt=""></div>
+                            <div><img src="./src/media/nissan.jpeg" alt=""></div>
+                            <div><img src="./src/media/ag_mc_ford.jpeg" alt=""></div>
+                            <div><img src="./src/media/nissan.jpeg" alt=""></div>
                         </div>
                     </div>
 
@@ -328,7 +328,7 @@
                 <div class="mt-10 flex flex-wrap lg:flex-nowrap gap-7">
                     <div class="bg-[#F5F5F5] overflow-hidden">
                         <a href="./single-product.html">
-                            <img class="scale-100 hover:scale-110 duration-1000" src="./media/ag_mc_ford.jpeg"
+                            <img class="scale-100 hover:scale-110 duration-1000" src="./src/media/ag_mc_ford.jpeg"
                                 alt="Car Img">
                             <div class="py-10 text-center">
                                 <h4 class="font-bold text-black/80 text-xl mb-5">AG MC Ford Raptor</h4>
@@ -352,7 +352,7 @@
 
                     <div class="bg-[#F5F5F5] overflow-hidden">
                         <a href="./single-product.html">
-                            <img class="scale-100 hover:scale-110 duration-1000" src="./media/ag_mc_ford.jpeg"
+                            <img class="scale-100 hover:scale-110 duration-1000" src="./src/media/ag_mc_ford.jpeg"
                                 alt="Car Img">
                             <div class="py-10 text-center">
                                 <h4 class="font-bold text-black/80 text-xl mb-5">AG MC Ford Raptor</h4>
@@ -376,7 +376,7 @@
 
                     <div class="bg-[#F5F5F5] overflow-hidden">
                         <a href="./single-product.html">
-                            <img class="scale-100 hover:scale-110 duration-1000" src="./media/ag_mc_ford.jpeg"
+                            <img class="scale-100 hover:scale-110 duration-1000" src="./src/media/ag_mc_ford.jpeg"
                                 alt="Car Img">
                             <div class="py-10 text-center">
                                 <h4 class="font-bold text-black/80 text-xl mb-5">AG MC Ford Raptor</h4>
@@ -409,11 +409,11 @@
     <!-- FOOTER (START) -->
     <footer>
 
-        <div style="background-image: url(./media/footer-bg.jpg)"
+        <div style="background-image: url(./src/media/footer-bg.jpg)"
             class="grid place-content-center bg-no-repeat bg-cover bg-left-top bg-fixed py-16 lg:py-32 bg-black/90 bg-blend-overlay">
             <div class="container">
-                <a href="./index.html">
-                    <img class="w-28 mx-auto" src="./media/big-logo.png" alt="">
+                <a href="/">
+                    <img class="w-28 mx-auto" src="./src/media/big-logo.png" alt="">
                 </a>
                 <h1 class="text-white/30 text-center tracking-widest mt-12 mb-2">: SHOWROOM LOCATION :</h1>
                 <p class="text-white text-center">32 Market St.128, Deeja Town, Florida, CA 12345</p>
