mobile menu updated, home banner updated

--- a/index.html
+++ b/index.html
@@ -77,8 +77,9 @@
                         </li>
                     </nav>
 
+                    <!-- Mobile menu -->
                     <div class="navigation lg:hidden">
-                        <a class="toggle absolute right-5 top-14" href=""><i class="fa fa-bars text-2xl text-white" aria-hidden="true"></i></a>
+                        <button class="toggle absolute right-5 top-14" href=""><i class="fa fa-bars text-2xl text-white" aria-hidden="true"></i></button>
 
                         <nav class="text-sm bg-red-600 p-8">
                             <li class="list-none mb-3"> <a href="/"
@@ -109,7 +110,7 @@
 
         <!-- BANNER -->
         <section style="background-image: url(./src/media/banner.jpeg)"
-            class="banner-shape grid place-content-center bg-no-repeat bg-cover bg-top h-screen">
+            class="banner-shape grid place-content-center bg-no-repeat bg-cover bg-top h-[700px] lg:h-screen">
 
             <div class="container">
                 <h1 class="text-white text-center text-4xl lg:text-6xl font-bold">Best Auto Rental Price</h1>
@@ -474,7 +475,7 @@
     <!-- FOOTER (END) -->
 
 
-
+<script src="./src/js/app.js"></script>
 </body>
 
 </html>
