--- a/app.html
+++ b/app.html
@@ -77,8 +77,9 @@
                         </li>
                     </nav>
 
+                    <!-- Mobile menu -->
                     <div class="navigation lg:hidden">
-                        <a class="toggle absolute right-5 top-14" href=""><i class="fa fa-bars text-2xl text-white" aria-hidden="true"></i></a>
+                        <button class="toggle absolute right-5 top-14" href=""><i class="fa fa-bars text-2xl text-white" aria-hidden="true"></i></button>
 
                         <nav class="text-sm bg-red-600 p-8">
                             <li class="list-none mb-3"> <a href="/"
@@ -200,7 +201,7 @@
     <!-- FOOTER (END) -->
 
 
-
+    <script src="./src/js/app.js"></script>
 </body>
 
 </html>
